Fixed address-phone alignment

--- a/css/main.css
+++ b/css/main.css
@@ -556,7 +556,7 @@ a {
 	;
 	position: absolute;
 	text-align: right;
-	left: -58%;
+	left: -51%;
 	-webkit-transition: all 2s ease;
 	-moz-transition: all 2s ease;
 	-o-transition: all 2s ease;
@@ -569,7 +569,7 @@ a {
 	;
 	position: absolute;
 	text-align: left;
-	left: 0%;
+	left: 1%;
 	-webkit-transition: all 2s ease;
 	-moz-transition: all 2s ease;
 	-o-transition: all 2s ease;
